--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -74,7 +74,7 @@
             <ComboBox Name="Races" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Stretch" SelectionChanged="Races_SelectionChanged"/>
             <Image Name="RaceThumbnail" Grid.Row="2" Source="images/empty.png" Stretch="UniformToFill"></Image>
         </Grid>
-        <Button Grid.Row="3" Grid.Column="0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Randomize everything" Click="RandomizeButtonClick"/>
-        <Button Grid.Row="3" Grid.Column="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Create character" Click="CreateCharacterClick"/>
+        <Button Grid.Row="3" Grid.Column="0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Randomize everything" Click="RandomizeButtonClicked"/>
+        <Button Grid.Row="3" Grid.Column="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Create character" Click="CreateCharacterClicked"/>
     </Grid>
 </Window>
